fix(core): middle gap

--- a/packages/core/src/components/split-button/split-button.scss
+++ b/packages/core/src/components/split-button/split-button.scss
@@ -14,9 +14,9 @@
     gap: 2px;
   }
 
-  .middleBorder {
+  .left-button-border {
     border-top-width: 2px;
-    border-right-width: 1px;
+    border-right-width: 0;
     border-left-width: 2px;
     border-bottom-width: 2px;
   }
